Refactored side panel UI to remove bottom spacing bug

--- a/styles/qasm-circuit-preview.less
+++ b/styles/qasm-circuit-preview.less
@@ -4,10 +4,8 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-@bottom-space: 250px;
-
 .qasm-circuit-preview {
-  overflow: hidden;
+  overflow: scroll;
   font-family: monospace;
   white-space: pre-wrap;
 }
@@ -16,8 +14,12 @@
   overflow: scroll;
   min-height: 100%;
   max-height: 100%;
-  padding-bottom: @bottom-space;
-  margin-bottom: calc(-1px * @bottom-space+20px);
+  padding-bottom: 100px;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: auto;
 }
 
 .qasm-circuit-preview .message {
@@ -40,6 +42,7 @@
   position: absolute;
   bottom: 0px;
   width: 100%;
+  display: block;
 
 }
 
